# zendesk-ticket-monitor

./: Dockerfile  README.md  SECURITY.md  config.lean.yaml  config.yaml  docker-compose.yml  pyproject.toml
spike-monitor/: init.py
spike_monitor/: __init__.py  __main__.py  actions.py  cli.py  config.py  detectors.py  observability.py  persistence.py  state.py  utils.py  zendesk_client.py
tests/: conftest.py  fixtures.py  test_actions.py  test_config.py  test_detectors.py  test_state.py  test_zendesk_client.py
