[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-monitor"
version = "1.0.0"
description = "Zero-ops ticket spike detection for Zendesk with cross-functional incident workflow"
authors = [{name = "Support Engineering", email = "support-eng@company.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "python-dateutil>=2.8.2",
    "prometheus-client>=0.19.0",
    "gspread>=5.12.0",
    "oauth2client>=4.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "types-requests",
    "types-pyyaml",
    "types-python-dateutil",
]

[project.scripts]
spike-monitor = "spike_monitor.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=spike_monitor --cov-report=term-missing"
